<resources>
    <string name="app_name">Sampah-Ku</string>
    <string name="title_activity_register">Register</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment_sampah_title">Daftar Sampah Plastik</string>
    <string name="dashboard_fragment_sampah_desc">Berikut ini adalah daftar sampah plastik yang dapat ditukar pada Sampah-Ku</string>
    <string name="sampah1">Gelas Mineral</string>
    <string name="harga_sampah1">2.500/Kg</string>
    <string name="sampah2">Botol Mineral</string>
    <string name="harga_sampah2">3.500/Kg</string>
    <string name="sampah3">Galon</string>
    <string name="harga_sampah3">2.000/Kg</string>
    <string name="sampah4">Jerigen</string>
    <string name="harga_sampah4">2.500/Kg</string>
    <string name="sampah5">Tutup Botol</string>
    <string name="harga_sampah5">20.500/Kg</string>
    <string name="sampah6">Kresek</string>
    <string name="harga_sampah6">200/Kg</string>
    <string name="sampah7">Plastik Putih</string>
    <string name="harga_sampah7">600/Kg</string>
    <string name="sampah8">Plastik Sablon</string>
    <string name="harga_sampah8">250/Kg</string>
    <string name="sampah9">Ember Warna</string>
    <string name="harga_sampah9">1.000/Kg</string>
    <string name="sampah10">Ember Putih</string>
    <string name="harga_sampah10">2.500/Kg</string>
    <string name="sampah11">Ember Hitam</string>
    <string name="harga_sampah11">850/Kg</string>
    <string name="user1">Fadel Irham</string>
    <string name="user2">Denaldi Prima Fadlurrahman</string>
    <string name="email1">irhamfadel@gmail.com</string>
    <string name="email2">denal.prima@student.umn.ac.id</string>
    <string name="pass1">********</string>
    <string name="pass2">********</string>
    <string name="jumlah_poin">20.000</string>
    <string name="ket_poin">Poin</string>
    <string name="menu1_title">Ubah Profil</string>
    <string name="menu2_title">Panduan</string>
    <string name="menu3_title">Kebijakan Privasi</string>
    <string name="menu4_title">Versi App</string>
    <string name="versi_app">1.0.0</string>
    <string name="menu5_title">Keluar Akun</string>
    <string name="fragment_kebijakan_privasi_title">Kebijakan Privasi</string>
    <string name="kebijakan_text">Ketentuan yang memuat di dalam Kebijakan Privasi berikut, menjelaskan bagaimana kami (PT Sampah-Ku) mengumpulkan, dan menggunakan informasi pribadi Anda yang kami dapatkan dari penggunaan layanan kami. Menggunakan atau mengunjungi layanan Sampah-Ku, maka Anda dianggap telah mengetahui dan menyetujui kebijakan privasi ini. Berikut kami uraikan ketentuan Kebijakan Privasi dari layanan kami :</string>
    <string name="kebijakan_no1">1. Informasi yang Kami Kumpulkan</string>
    <string name="kebijakan_no1_text">Kami mengumpulkan informasi Pribadi tertentu dari Anda agar layanan kami dapat berjalan sebagaimana mestinya untuk Anda akses dan gunakan, contoh: untuk dapat mengakses fitur-fitur yang lebih lengkap, Anda diharuskan mendaftar dan melengkapi data pribadi Anda terlebih dahulu.</string>
    <string name="kebijakan_no2">2. Keamanan</string>
    <string name="kebijakan_no2_text">Kami tidak menjamin keamanan basis data kami dan kami juga tidak menjamin bahwa data yang Anda berikan tidak akan disimpan atau terganggu dalam proses pengiriman informasi. Setiap pengiriman informasi oleh Anda kepada kami merupakan tanggung jawab Anda sendiri. Anda tidak boleh mengungkapkan sandi Anda kepada siapa pun. Satu hal yang juga perlu kami sampaikan, bahwa bagaimana pun keamanan dari sebuah teknologi, tidak ada sistem yang tidak bisa ditembus.</string>
    <string name="kebijakan_no3">3. Penggunaan Informasi yang Kami Kumpulkan</string>
    <string name="kebijakan_no3_text">Kami menggunakan email, nama, dan sandi akun Anda untuk memverifikasi kepemilikan Anda atas suatu akun, untuk berkomunikasi dengan Anda sehubungan dengan penggunaan layanan dan untuk memberikan Anda informasi mengenai situs Sampah-Ku. Kami juga dapat menggunakan email Anda untuk mengirim pesan.</string>
    <string name="fragment_panduan_title">Panduan</string>
    <string name="pan_menu1_title">Registrasi Akun</string>
    <string name="pan_menu2_title">Tukar Sampah Menjadi Poin</string>
    <string name="pan_menu3_title">Beli Produk Daur Ulang</string>
    <string name="pan_menu4_title">Tukar Poin Menjadi Saldo</string>
    <string name="pan_menu5_title">Gabung Menjadi Mitra</string>
    <string name="fragment_panduan_regis_akun_title">Registrasi Akun</string>
    <string name="pan_regis_akun_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse convallis mi vitae felis interdum tristique. Morbi fermentum, orci vitae sollicitudin semper, eros arcu pulvinar nisi, nec egestas nulla ante ut augue. In velit dolor, vulputate vel vehicula et, elementum ut libero. Proin imperdiet venenatis dapibus. Nunc accumsan diam vitae tellus mattis, sed hendrerit tortor consequat. Nulla vitae massa leo. Vivamus in elit vitae neque suscipit efficitur ac blandit velit. Donec eget enim convallis, cursus tellus vitae, luctus ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet arcu volutpat, scelerisque nulla in, pulvinar tellus. In vel pulvinar libero, vel semper enim. Quisque sed faucibus augue. Sed quis enim tempus, tincidunt urna in, convallis purus. Integer id pellentesque ligula. Duis nec elementum justo. Donec interdum molestie velit, sit amet pretium tellus. Sed vulputate ante lectus, in faucibus sapien rutrum quis. Cras varius nulla elit. Nulla varius vulputate nunc vel fermentum. Maecenas porttitor eros in placerat commodo..</string>
    <string name="fragment_panduan_tukar_sampah_title">Tukar Sampah Menjadi Poin</string>
    <string name="pan_tukar_sampah_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse convallis mi vitae felis interdum tristique. Morbi fermentum, orci vitae sollicitudin semper, eros arcu pulvinar nisi, nec egestas nulla ante ut augue. In velit dolor, vulputate vel vehicula et, elementum ut libero. Proin imperdiet venenatis dapibus. Nunc accumsan diam vitae tellus mattis, sed hendrerit tortor consequat. Nulla vitae massa leo. Vivamus in elit vitae neque suscipit efficitur ac blandit velit. Donec eget enim convallis, cursus tellus vitae, luctus ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet arcu volutpat, scelerisque nulla in, pulvinar tellus. In vel pulvinar libero, vel semper enim. Quisque sed faucibus augue. Sed quis enim tempus, tincidunt urna in, convallis purus. Integer id pellentesque ligula. Duis nec elementum justo. Donec interdum molestie velit, sit amet pretium tellus. Sed vulputate ante lectus, in faucibus sapien rutrum quis. Cras varius nulla elit. Nulla varius vulputate nunc vel fermentum. Maecenas porttitor eros in placerat commodo..</string>
    <string name="fragment_panduan_beli_produk_title">Beli Produk Daur Ulang</string>
    <string name="pan_beli_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse convallis mi vitae felis interdum tristique. Morbi fermentum, orci vitae sollicitudin semper, eros arcu pulvinar nisi, nec egestas nulla ante ut augue. In velit dolor, vulputate vel vehicula et, elementum ut libero. Proin imperdiet venenatis dapibus. Nunc accumsan diam vitae tellus mattis, sed hendrerit tortor consequat. Nulla vitae massa leo. Vivamus in elit vitae neque suscipit efficitur ac blandit velit. Donec eget enim convallis, cursus tellus vitae, luctus ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet arcu volutpat, scelerisque nulla in, pulvinar tellus. In vel pulvinar libero, vel semper enim. Quisque sed faucibus augue. Sed quis enim tempus, tincidunt urna in, convallis purus. Integer id pellentesque ligula. Duis nec elementum justo. Donec interdum molestie velit, sit amet pretium tellus. Sed vulputate ante lectus, in faucibus sapien rutrum quis. Cras varius nulla elit. Nulla varius vulputate nunc vel fermentum. Maecenas porttitor eros in placerat commodo..</string>
    <string name="fragment_panduan_tukar_poin_title">Tukar Poin Menjadi Saldo</string>
    <string name="pan_tukar_poin_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse convallis mi vitae felis interdum tristique. Morbi fermentum, orci vitae sollicitudin semper, eros arcu pulvinar nisi, nec egestas nulla ante ut augue. In velit dolor, vulputate vel vehicula et, elementum ut libero. Proin imperdiet venenatis dapibus. Nunc accumsan diam vitae tellus mattis, sed hendrerit tortor consequat. Nulla vitae massa leo. Vivamus in elit vitae neque suscipit efficitur ac blandit velit. Donec eget enim convallis, cursus tellus vitae, luctus ipsum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet arcu volutpat, scelerisque nulla in, pulvinar tellus. In vel pulvinar libero, vel semper enim. Quisque sed faucibus augue. Sed quis enim tempus, tincidunt urna in, convallis purus. Integer id pellentesque ligula. Duis nec elementum justo. Donec interdum molestie velit, sit amet pretium tellus. Sed vulputate ante lectus, in faucibus sapien rutrum quis. Cras varius nulla elit. Nulla varius vulputate nunc vel fermentum. Maecenas porttitor eros in placerat commodo..</string>
    <string name="fragment_panduan_gabung_title">Gabung Menjadi Mitra</string>
    <string name="fragment_ubah_profil_title">Ubah Profil Anda</string>
    <string name="fragment_tukar_poin_gopay_title">Saldo GoPay Rp 10.000</string>
    <string name="saldo_gopay1">10.000 Poin/pcs</string>
    <string name="fragment_beli_prdk_tas_title">Tas Plastik Pelangi</string>
    <string name="hrg_prdk1">5.000 Poin/pcs</string>
    <string name="btn_tutup">TUTUP</string>
    <string name="btn_kembali">KEMBALI</string>
    <string name="btn_simpan">SIMPAN</string>
    <string name="btn_batal_simpan">BATAL SIMPAN</string>
    <string name="btn_batal">BATAL</string>
    <string name="btn_tukar_poin">TUKAR POIN</string>
    <string name="btn_psn">PESAN SEKARANG</string>
    <string name="btn_min">-</string>
    <string name="btn_plus">+</string>
    <string name="txt_nama">Nama Pengguna</string>
    <string name="txt_email">Alamat Email</string>
    <string name="txt_password">Kata Sandi</string>
    <string name="txt_repassword">Ketik Ulang Kata Sandi</string>
    <string name="txt_no_hp">Nomor HP</string>
    <string name="txt_penerima">Nama penerima</string>
    <string name="txt_alamat">Alamat lengkap penerima</string>
    <string name="txt_jmlh">Jumlah</string>
    <string name="txt_jmlh_prdk">1</string>
</resources>