<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UbahProfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fragment_ubah_profil_title"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:orientation="vertical"
            android:background="@drawable/custom_input"
            android:layout_marginBottom="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_nama"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user1"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_email"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email1"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_password"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass1"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_repassword"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/custom_input">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass1"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_ttp_ubah_profil"
            android:layout_width="161dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/btn_simpan"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_button"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/btn_ttp_pan_gabung"
            android:layout_width="161dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/btn_batal_simpan"
            android:textColor="@color/colorBlack"
            android:background="@drawable/custom_button2" />

    </LinearLayout>
</FrameLayout>