<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BeliProduk">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/beli_namaProduk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fragment_beli_prdk_tas_title"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:orientation="vertical"
            android:background="@drawable/custom_input"
            android:layout_marginBottom="20dp" />

        <ImageView
            android:id="@+id/gambarProduk"
            android:layout_width="280dp"
            android:layout_height="200dp"
            android:src="@drawable/tas"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/hargaProduk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hrg_prdk1"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:textAlignment="center"
            android:layout_marginBottom="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input">

            <EditText
                android:id="@+id/namaPenerima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_penerima"
                android:textSize="14sp"
                android:inputType="textPersonName"
                android:background="@null"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input">

            <EditText
                android:id="@+id/alamatPenerima"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_alamat"
                android:textSize="14sp"
                android:background="@null"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_jmlh"
                android:layout_gravity="center"
                android:layout_marginRight="170dp"/>

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:background="@drawable/custom_input">

                <TextView
                    android:id="@+id/txtTmbh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_plus"
                    android:textAlignment="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/txtJmlPrdk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_jmlh_prdk"
                    android:textSize="14sp"
                    android:textAlignment="center"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:background="@drawable/custom_input">

                <TextView
                    android:id="@+id/txtKrgn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_min"
                    android:textAlignment="center"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_beli_psn_skrgn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/btn_psn"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button" />

        <Button
            android:id="@+id/btn_beli_kmbl"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/btn_kembali"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"
            android:background="@drawable/custom_button2" />

    </LinearLayout>
</FrameLayout>