<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TukarPoinSaldoGopay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fragment_tukar_poin_gopay_title"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:orientation="vertical"
            android:background="@drawable/custom_input"
            android:layout_marginBottom="30dp" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/dompet"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saldo_gopay1"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:textAlignment="center"
            android:layout_marginBottom="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_input">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_no_hp"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_gopay_tkrPoin"
            android:layout_width="161dp"
            android:layout_height="50dp"
            android:text="@string/btn_tukar_poin"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button" />

        <Button
            android:id="@+id/btn_gopay_btl"
            android:layout_width="161dp"
            android:layout_height="50dp"
            android:text="@string/btn_batal"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"
            android:background="@drawable/custom_button2" />

    </LinearLayout>
</FrameLayout>