<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fragment_panduan_tukar_sampah_title"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:layout_marginBottom="25dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pan_tukar_sampah_text"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="25dp" />

        <Button
            android:id="@+id/btn_ttp_pan_tukar_sampah"
            android:layout_width="161dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/btn_tutup"
            android:textColor="@color/colorWhite"
            android:background="@drawable/custom_button" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>